--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/prj1
 spring.datasource.username=root
 spring.datasource.password=1234
+
+# 한개 파일 크기 제한
+spring.servlet.multipart.max-file-size=1MB
+# 총 파일 크기 제한
+spring.servlet.multipart.max-request-size=50MB
