--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=1234
 spring.servlet.multipart.max-file-size=1MB
 # 총 파일 크기 제한
 spring.servlet.multipart.max-request-size=50MB
+
+#bucketName
+spring.config.import = custom.properties
