--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
+# database connection pool max size
+spring.datasource.hikari.maximum-pool-size=2
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/prj1
-spring.datasource.username=root
-spring.datasource.password=1234
 
 # file size for one file
 spring.servlet.multipart.max-file-size=1MB
